# pre-commit-tools-via-poetry

./: .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  poetry-autoflake  poetry-black  poetry-flake8  poetry-isort  poetry-mypy  poetry-pyright  poetry-ruff  pyproject.toml
wlr/: poetry_run_on_all_files.py
